--- a/loginpage.html
+++ b/loginpage.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <h1>Welcome Sample Application</h1>
+        <h1 style="background-color:antiquewhite;font-family: 'Courier New', Courier, monospace;">Welcome Sample Application</h1>
         <form action="">
             username:<input type="text"/>
             password:<input type="password"/>
