--- a/register.html
+++ b/register.html
@@ -1,6 +1,16 @@
 <html>
+    <head>
+        <style>
+            h1
+            {
+                background-color: aqua;
+                font-family: 'Times New Roman', Times, serif;
+            }
+        </style>
+    </head>
     <body>
         <h1>RegisterPage</h1>
+        <h1>Welcome</h1>
         <form>
             <table  width="50%" height="50%">
                 <tr>
